[gd_scene load_steps=6 format=3 uid="uid://c6ca6kr81isqy"]

[ext_resource type="Script" path="res://Scenes/Bullet/bullet.gd" id="1_7xv1h"]
[ext_resource type="PackedScene" uid="uid://f65qq7gvhlgu" path="res://Scenes/Components/RandomSprite/RandomizedSprite.tscn" id="2_vfsaf"]
[ext_resource type="Texture2D" uid="uid://djdxrudqhyrqe" path="res://Art/Projectiles/Player-projectile-v2-sheet.png" id="3_hykjp"]
[ext_resource type="PackedScene" uid="uid://b78ktyqyvqgdo" path="res://Scenes/Components/hitbox_component.tscn" id="3_npj6v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_byt17"]
radius = 2.03333
height = 8.4

[node name="Bullet" type="CharacterBody2D" groups=["player_attack"]]
visibility_layer = 7
rotation = -1.57079
scale = Vector2(30, 30)
collision_layer = 4
collision_mask = 22
slide_on_ceiling = false
script = ExtResource("1_7xv1h")

[node name="RandomizedSprite" parent="." instance=ExtResource("2_vfsaf")]
rotation = 1.57079
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_hykjp")
region_rect = Rect2(0, 0, 32, 64)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rotation = -1.57081
scale = Vector2(0.20842, 0.413947)

[node name="HitBoxComponent" parent="." instance=ExtResource("3_npj6v")]
collision_layer = 4
collision_mask = 18

[node name="HitboxShape" type="CollisionShape2D" parent="HitBoxComponent"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_byt17")
debug_color = Color(1, 0, 0.141176, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.683368, 0.683368)
shape = SubResource("CapsuleShape2D_byt17")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
[connection signal="body_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_body_entered"]
